--- a/src/Components/CodeEditor/CodeEditor.scss
+++ b/src/Components/CodeEditor/CodeEditor.scss
@@ -1,3 +1,5 @@
+@import "../../index.scss";
+
 .editor {
     height: 90vh;
     width: 65%;
@@ -5,4 +7,9 @@
     background-color: #1E1E1E;
     color: white;
     padding: 10px;
+    
+    @include media("<=phone"){
+        width: 55%;
+
+    }
 }
