download button added

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -95,6 +95,14 @@
                 opacity: 1;
             }
         }
+        .downloadIcon{
+            cursor: pointer;
+            font-size: 32px;
+        }
+        .downloadbtn{
+            background:#1E1E1E;
+            border:none;
+        }
 
         .icon {
             font-size: 32px;
