--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,7 +2,8 @@
   margin-left: 10rem;
   display:flex;
 }
-.btn1{
-  margin-right: 1rem;
+.btn2{
   font-weight: 300;
+  margin-left: 120px;
+  margin-top: 10px;
 }
