download code feature is added

--- a/src/Components/CodeEditor/CodeEditor.scss
+++ b/src/Components/CodeEditor/CodeEditor.scss
@@ -13,3 +13,10 @@
 
     }
 }
+
+.download_button {
+    height: 40px !important; 
+    width: 40px !important;
+    background-color: #1E1E1E;
+    margin-left: 95%;
+}
